# snapper-TUI-rust

./: Cargo.toml  README.md  how-to-release.md  snapper-TUI-rust
.github/workflows/: rust.yml
src/: app.rs  data.rs  main.rs  ui.rs
