[package]
name = "snapper-TUI-rust"
version = "0.1.5"
edition = "2025"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.53"
crossterm = "0.29.0"
ratatui = "0.28.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tachyonfx = "0.7.0"
color-to-tui = "0.2.0"
ratatui-macros = "0.5.0"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.